<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kg.magnit.notes2016.MainActivity">

    <item
        android:id="@+id/add_note"
        android:orderInCategory="50"
        android:title="@string/add_note"
        android:icon="@drawable/plus"
        app:showAsAction="always" />

    <item
        android:id="@+id/show_map"
        android:orderInCategory="60"
        android:title="@string/show_map"
        android:icon="@drawable/google_maps"
        app:showAsAction="always" />

    <item
        android:id="@+id/share"
        android:orderInCategory="90"
        android:title="@string/share"
        android:icon="@drawable/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/deleteall"
        android:orderInCategory="98"
        android:title="@string/deleteall"
        app:showAsAction="never" />

    <item
        android:id="@+id/developer"
        android:orderInCategory="100"
        android:title="@string/developer"
        android:icon="@drawable/info"
        app:showAsAction="never" />


</menu>
